feat. created table with search filter ClientScreen

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,10 +34,14 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Proj_infoX
 excludes=
 file.reference.mysql-connector-j-9.0.0.jar=C:\\Users\\Felipe Pinga\\Downloads\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
+file.reference.rs2xml.jar=C:\\Users\\Felipe Pinga\\Downloads\\rs2xml.jar
+file.reference.sqlitejdbc-v056.jar=C:\\Users\\Felipe Pinga\\Downloads\\sqlitejdbc-v056.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.0.0.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.sqlitejdbc-v056.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
